	PR c++/26036 	* typeck.c (convert_arguments): Return error_mark_node instead of 	error_mark_list. 	* cp-tree.h (error_mark_list): Remove declaration. 	* decl.c (error_mark_list): Remove definition. 	(cxx_init_decl_processing): Do not initialize error_mark_list.

* g++.dg/expr/call3.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@113087 138bc75d-0d04-0410-961f-82ee72b054a4